<resources>
    <string name="app_name" translatable="false">CoffeShop</string>
    <string name="choice_your_nfavorite_coffee">Choice your\nFavorite Coffee</string>
    <string name="the_best_grain_the_finest_roast_nthe_powerfull_flavor">The best grain,the finest roast\nthe powerful flavor</string>
    <string name="get_started">Get Started</string>
    <string name="search_anything">Search anything…</string>
    <string name="category">Category</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="see_all">See all</string>
    <string name="language">Language</string>
    <string name="language_icon">Language icon</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="enter_your_discount_code">Enter Your Discount Code</string>
    <string name="apply">Apply</string>
    <string name="total_cash" translatable="false">$-</string>
    <string name="total">Total</string>
    <string name="discounts_cash" translatable="false">$-</string>
    <string name="total_tax">Total Tax</string>
    <string name="delivery">Delivery</string>
    <string name="subtotal">SubTotal</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="coffee_size">Coffee Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_plus" translatable="false">+</string>
    <string name="quantity_minus" translatable="false">-</string>
    <string name="description_title">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Order</string>
    <string name="explorer">Explorer</string>
    <string name="choose_your_payment_method">Choose your\npayment method</string>
    <string name="cash_icon" translatable="false">Cash Icon</string>
    <string name="cash">Cash</string>
    <string name="confirm">Confirm</string>
    <string name="payment_type">Payment type</string>
    <string name="yape" translatable="false">Yape</string>
    <string name="paypal" translatable="false">PayPal</string>
    <string name="credit_debit_card">Credit / Debit\ncard</string>
    <string name="coffee">coffee</string>
    <string name="price">price</string>
    <string name="orders">Orders</string>
    <string name="order_id">Order Id #</string>
    <string name="total_price">Total price: $</string>
    <string name="date">"Date: "</string>
    <string name="something_went_wrong">Something went wrong, try again</string>
    <string name="order_detail">Order details</string>
    <string name="subtotal_plus_sign" translatable="false">Subtotal</string>
    <string name="gross_amount">"Gross amount: "</string>
    <string name="total_tax_plus_sign" translatable="false">"IGV "</string>
    <string name="delivery_plus_sign" translatable="false">"Delivery: "</string>
    <string name="total_plus_sign" translatable="false">"Total: "</string>
    <string name="payment_type_plus_sign">"Payment type: "</string>
    <string name="paypal_payment_in_progress">Paypal Payment in progress…</string>
    <string name="payment_cancelled">The payment was cancelled</string>
    <string name="could_not_capture_order">Couldn\'t capture PayPal\norder details</string>
    <string name="payment_successful">Payment successful, enjoy!</string>
    <string name="paypal_loaded_succesfully">Paypal was loaded successfully!</string>
    <string name="paypal_could_not_load">There was a problem while\ntrying to load PayPal</string>
    <string name="insert_your_card_details">Insert your card details</string>
    <string name="cc" translatable="false">CC</string>
    <string name="hint_card_number" translatable="false">XXXX-XXXX-XXXX-XXXX</string>
    <string name="expiration_date">Expiration date</string>
    <string name="cci" translatable="false">CCI</string>
    <string name="expiration_date_hint" translatable="false">DD/MM</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="cvv_hint" translatable="false">XXX</string>
    <string name="required">Required field</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="empty_cart">The cart is empty!</string>
    <string name="new_category_name">Name the new category…</string>
    <string name="add_category">Add category</string>
    <string name="coffee_title">Coffee title</string>
    <string name="extra_info_optional">Extra info (Optional)</string>
    <string name="coffee_description" >Coffee description</string>
    <string name="coffee_price">Coffee price</string>
    <string name="imagen_seleccionada">Imagen seleccionada</string>
    <string name="select_image">Select an image</string>
    <string name="add_coffee">Add coffee</string>
</resources>