<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/language_icon"
            app:srcCompat="@drawable/back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/darkBrown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:layout_gravity="center"
                android:textColor="@color/darkBrown"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textOrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkBrown"
                android:textSize="20sp"
                android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:text="@string/payment_type_plus_sign"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textPaymentType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="58dp"
                android:gravity="start"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:text="@string/date"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textOrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="58dp"
                android:gravity="start"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:text="@string/subtotal_plus_sign"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:text="@string/gross_amount"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textGrossPayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="70dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:gravity="end"
                android:text="@string/delivery_plus_sign"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textDeliveryFee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:gravity="end"
                android:text="@string/total_tax_plus_sign"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textTaxPayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:gravity="end"
                android:text="@string/total_plus_sign"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textTotalPayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/order_detail"
        android:textColor="@color/darkBrown"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@color/white">

        <ListView
            android:id="@+id/lvOrders"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>