<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/orderCard"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="10dp"
    android:checkable="true"
    app:checkedIcon="@null"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/white"
    app:strokeWidth="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgPaymentIcon"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contentDescription="@string/payment_type"
                android:src="@drawable/coffee_cup" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textOrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkBrown"
                android:text="@string/order_id"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textOrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/total_price"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textOrderPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/date"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
